sfdx-source/force-app/main/default/objects/ApplicationBinding__mdt/ApplicationBinding__mdt.object-meta.xml
<CustomObject>
    <description>Application binding metadata for dynamic application binding LEM-8196 Dynamic Application Binding</description>
    <label>Application Binding</label>
    <pluralLabel>Application Bindings</pluralLabel>
</CustomObject>