sfdx-source/force-app/main/default/objects/ApplicationBinding__mdt/fields/BindingObject__c.field-meta.xml
<CustomField>
    <fullName>BindingObject__c</fullName>
    <label>Binding Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Application Bindings</relationshipLabel>
    <relationshipName>ApplicationBindings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>