sfdx-source/force-app/main/default/objects/ApplicationBinding__mdt/fields/BindingObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>BindingObjectApiName__c</fullName>
    <label>Binding Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>