sfdx-source/force-app/main/default/objects/ApplicationBinding__mdt/fields/BindingType__c.field-meta.xml
<CustomField>
    <fullName>BindingType__c</fullName>
    <label>Binding Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>