sfdx-source/force-app/main/default/objects/ApplicationBinding__mdt/fields/ImplementationType__c.field-meta.xml
<CustomField>
    <fullName>ImplementationType__c</fullName>
    <label>Implementation Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>