sfdx-source/force-app/main/default/objects/ApplicationBinding__mdt/validationRules/DomainRequiresAnImplementation.validationRule-meta.xml
<ValidationRule>
    <fullName>DomainRequiresAnImplementation</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT( ApplicationType__c ) = &apos;Domain&apos; &amp;&amp; ISBLANK( ImplementationType__c )</errorConditionFormula>
    <errorDisplayField>ImplementationType__c</errorDisplayField>
    <errorMessage>Domain bindings must include an Implementation Type.</errorMessage>
</ValidationRule>