sfdx-source/force-app/main/default/objects/ApplicationBinding__mdt/validationRules/SelectorRequiresAnImplementation.validationRule-meta.xml
<ValidationRule>
    <fullName>SelectorRequiresAnImplementation</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(ApplicationType__c) = &apos;Selector&apos; &amp;&amp; ISBLANK(ImplementationType__c)</errorConditionFormula>
    <errorDisplayField>ImplementationType__c</errorDisplayField>
    <errorMessage>Selectors bindings must include an Implementation Type.</errorMessage>
</ValidationRule>