sfdx-source/force-app/main/default/objects/ApplicationBinding__mdt/validationRules/SelectorRequiresAnSObject.validationRule-meta.xml
<ValidationRule>
    <fullName>SelectorRequiresAnSObject</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(ApplicationType__c) = &apos;Selector&apos; &amp;&amp; ISBLANK( BindingObject__c ) &amp;&amp; ISBLANK( BindingObjectApiName__c )</errorConditionFormula>
    <errorDisplayField>BindingObject__c</errorDisplayField>
    <errorMessage>A Selector binding requires an SObject. Please select a Binding Object or enter a Binding Object API Name.</errorMessage>
</ValidationRule>