sfdx-source/force-app/main/default/objects/ApplicationBinding__mdt/validationRules/ServiceRequiresAnBindingType.validationRule-meta.xml
<ValidationRule>
    <fullName>ServiceRequiresAnBindingType</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT( ApplicationType__c ) = &apos;Service&apos; &amp;&amp; ISBLANK(BindingType__c )</errorConditionFormula>
    <errorDisplayField>BindingType__c</errorDisplayField>
    <errorMessage>Service bindings requires an Binding Type</errorMessage>
</ValidationRule>