sfdx-source/force-app/main/default/objects/ApplicationBinding__mdt/validationRules/ServiceRequiresAnImplementation.validationRule-meta.xml
<ValidationRule>
    <fullName>ServiceRequiresAnImplementation</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT( ApplicationType__c ) = &apos;Service&apos; &amp;&amp; ISBLANK( ImplementationType__c )</errorConditionFormula>
    <errorDisplayField>ImplementationType__c</errorDisplayField>
    <errorMessage>Service bindings must include an Implementation Type.</errorMessage>
</ValidationRule>