sfdx-source/force-app/main/default/objects/ApplicationBinding__mdt/validationRules/UnitOfWorkRequiresAnExecutionOrder.validationRule-meta.xml
<ValidationRule>
    <fullName>UnitOfWorkRequiresAnExecutionOrder</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(ApplicationType__c) = &apos;UnitOfWork&apos; &amp;&amp; ISBLANK( Execution_Order__c )</errorConditionFormula>
    <errorDisplayField>Execution_Order__c</errorDisplayField>
    <errorMessage>Unit of Work binding requires an execution order.  Please select the order of execution for the object.</errorMessage>
</ValidationRule>