sfdx-source/force-app/main/default/objects/ApplicationBinding__mdt/listViews/DomainBindings.listView-meta.xml
<ListView>
    <fullName>DomainBindings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>ApplicationType__c</columns>
    <columns>BindingObject__c</columns>
    <columns>BindingObjectApiName__c</columns>
    <columns>ImplementationType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ApplicationType__c</field>
        <operation>equals</operation>
        <value>Domain</value>
    </filters>
    <label>Domain Bindings</label>
</ListView>