sfdx-source/force-app/main/default/objects/ApplicationBinding__mdt/listViews/SelectorBindings.listView-meta.xml
<ListView>
    <fullName>SelectorBindings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>ApplicationType__c</columns>
    <columns>BindingObject__c</columns>
    <columns>BindingObjectApiName__c</columns>
    <columns>ImplementationType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ApplicationType__c</field>
        <operation>equals</operation>
        <value>Selector</value>
    </filters>
    <label>Selector Bindings</label>
</ListView>