sfdx-source/force-app/main/default/objects/ApplicationBinding__mdt/listViews/Service_Bindings.listView-meta.xml
<ListView>
    <fullName>Service_Bindings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>ApplicationType__c</columns>
    <columns>BindingType__c</columns>
    <columns>ImplementationType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ApplicationType__c</field>
        <operation>equals</operation>
        <value>Service</value>
    </filters>
    <label>Service Bindings</label>
</ListView>