sfdx-source/force-app/main/default/objects/ApplicationBinding__mdt/listViews/UnitOfWork_Binding.listView-meta.xml
<ListView>
    <fullName>UnitOfWork_Binding</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>ApplicationType__c</columns>
    <columns>BindingObject__c</columns>
    <columns>BindingObjectApiName__c</columns>
    <columns>Execution_Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ApplicationType__c</field>
        <operation>equals</operation>
        <value>UnitOfWork</value>
    </filters>
    <label>UnitOfWork Binding</label>
</ListView>